# ChangeLog for net-analyzer/httping
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-analyzer/httping/ChangeLog,v 1.101 2013/05/07 14:45:54 jer Exp $

*httping-2.3 (07 May 2013)

  07 May 2013; Jeroen Roovers <jer@gentoo.org> +httping-2.3.ebuild:
  Version bump.

  01 May 2013; Jeroen Roovers <jer@gentoo.org> httping-1.5.5.ebuild,
  httping-1.5.8.ebuild, httping-2.0.ebuild, httping-2.1.ebuild,
  httping-2.2.1.ebuild, httping-2.2.ebuild:
  Do not install readme.txt.

*httping-2.2.1 (21 Apr 2013)

  21 Apr 2013; Tim Harder <radhermit@gentoo.org> +httping-2.2.1.ebuild,
  +files/httping-2.2.1-flags.patch:
  Version bump.

*httping-2.2 (05 Apr 2013)

  05 Apr 2013; Jeroen Roovers <jer@gentoo.org> +httping-2.2.ebuild:
  Version bump.

*httping-2.1 (23 Mar 2013)

  23 Mar 2013; Jeroen Roovers <jer@gentoo.org> +httping-2.1.ebuild:
  Version bump.

  20 Mar 2013; Jeroen Roovers <jer@gentoo.org> -httping-1.5.3.ebuild,
  -httping-1.5.5-r1.ebuild, -files/httping-1.5.5-help.patch,
  -httping-1.5.6.ebuild, -files/httping-1.5.6-help.patch,
  -httping-1.5.7.ebuild, httping-1.5.8.ebuild:
  Stable for HPPA (bug #462512).

  20 Mar 2013; Jeroen Roovers <jer@gentoo.org> +files/httping-2.0-flags.patch,
  -httping-1.6.ebuild, httping-2.0.ebuild:
  Respect CFLAGS/LDFLAGS.

  20 Mar 2013; Vicente Olivert Riera <vincent@gentoo.org> httping-1.5.8.ebuild:
  amd64, ppc64, x86 stable, wrt bug #462512

*httping-2.0 (20 Mar 2013)
*httping-1.6 (20 Mar 2013)

  20 Mar 2013; Jeroen Roovers <jer@gentoo.org> +httping-1.6.ebuild,
  +httping-2.0.ebuild:
  Version bump.

  20 Feb 2013; Jeroen Roovers <jer@gentoo.org> httping-1.5.8.ebuild,
  metadata.xml:
  Add support for TCP Fast OPEN.

*httping-1.5.8 (20 Feb 2013)

  20 Feb 2013; Tim Harder <radhermit@gentoo.org> +httping-1.5.8.ebuild:
  Version bump.

*httping-1.5.7 (12 Jan 2013)

  12 Jan 2013; Tim Harder <radhermit@gentoo.org> +httping-1.5.7.ebuild:
  Version bump.
