@@ -1,6 +1,11 @@
 # ChangeLog for net-analyzer/httping
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-analyzer/httping/ChangeLog,v 1.101 2013/05/07 14:45:54 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-analyzer/httping/ChangeLog,v 1.102 2013/05/09 17:39:49 radhermit Exp $
+
+*httping-2.3.1 (09 May 2013)
+
+  09 May 2013; Tim Harder <radhermit@gentoo.org> +httping-2.3.1.ebuild:
+  Version bump.
 
 *httping-2.3 (07 May 2013)
 
